<resources>
    <string name="app_name">Digital Money Bag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earn">জমা</string>
    <string name="instant_balance">বর্তমান ব্যালান্স</string>
    <string name="list_of_total_earn">মোট আয়ের তালিকা</string>
    <string name="list_of_total_expense">মোট ব্যয়ের তালিকা</string>
    <string name="spend">খরচ</string>
    <string name="total_spend">মোট ব্যয়</string>
    <string name="total_earn">মোট আয়</string>

    <string-array name="menu_item">
        <item>Home</item>
        <item>About Us</item>
        <item>Contact</item>
        <item>Settings</item>
    </string-array>


</resources>