<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/rl_head_part"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff">
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"


                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_balance_show_one"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/instant_balance"/>
                <TextView
                    android:id="@+id/tv_balance_show_two"
                    android:layout_below="@+id/tv_balance_show_one"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1,000 tk"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_below="@+id/rl_head_part"
        android:layout_above="@+id/rl_bootom"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="110dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_earn"
                        android:layout_centerInParent="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_earn"/>
                    <TextView
                        android:layout_below="@+id/iv_earn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/earn"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="110dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_speand"
                        android:layout_centerInParent="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_spend"/>
                    <TextView
                        android:layout_below="@+id/iv_speand"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spend"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_total_earn"
                        android:layout_centerHorizontal="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_total_earn"/>
                    <TextView
                        android:id="@+id/tv_total_earn_text"
                        android:layout_below="@+id/iv_total_earn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_earn"/>
                    <TextView
                        android:id="@+id/tv_total_earn_amount"
                        android:layout_below="@+id/tv_total_earn_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="= 500 tk"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_total_spend"
                        android:layout_centerHorizontal="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_total_spend"/>
                    <TextView
                        android:id="@+id/tv_total_spend_text"
                        android:layout_below="@+id/iv_total_spend"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_spend"/>
                    <TextView
                        android:id="@+id/tv_total_spend_amount"
                        android:layout_below="@+id/tv_total_spend_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="= 500 tk"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bootom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_total_earn"
                    android:backgroundTint="@color/sp_bg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_total_expense"
                    android:backgroundTint="@color/sp_bg"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>